// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`payRemainder builds the PayRemainder request 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountDebit": 10,
      "Currency": "EUR",
      "Invoice": "64752550bf1f40",
      "Order": "64752550bf1f40",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "PayRemainder",
            "Name": "idealprocessing",
            "Parameters": [
              {
                "Name": "Issuer",
                "Value": "ABNANL2A",
              },
            ],
            "Version": 2,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;

exports[`testing Ideal Processing methods Issuers 1`] = `
[
  {
    "channel": "Web",
    "data": undefined,
    "method": "GET",
    "path": "/json/Transaction/Specification/idealprocessing?serviceVersion=2",
  },
]
`;

exports[`testing Ideal Processing methods Pay Simple Payload 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountDebit": 100,
      "ContinueOnIncomplete": 0,
      "Currency": "EUR",
      "Invoice": "64752550bf1f40",
      "Order": "64752550bf1f40",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Pay",
            "Name": "idealprocessing",
            "Parameters": [
              {
                "Name": "Issuer",
                "Value": "ABNANL2A",
              },
            ],
            "Version": 2,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;
